Fix: - removed variable - added margin to fix logo spacing

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
 }
 
 .lang-btns {
